# opssat-onboard-image-denoiser

./: .gitignore  .gitmodules  INSTALL.md  README.md  autoencoders.py  constants.py  denoise.py  denoiser.py  find_bad_jpegs.py  pyproject.toml  requirements.txt  train_denoiser.py
models/: denoiser_ae_cfnp200.tflite
models/autoencoders/: ae_cfnp50_f.tflite  ae_cfpn150_f.tflite  ae_cfpn50_p.tflite  ae_fnp200_f.tflite  ae_fnp50_f.tflite  ae_fpn50_p.tflite
models/dncnns/: dncnn.tflite  get_and_convert_model.py
models/full/: denoiser_ae_cfnp100.tflite  denoiser_ae_fnp100.tflite  denoiser_ae_fnp150.tflite
models/patched/: denoiser_ae_cfnp100.tflite  denoiser_ae_cfnp150.tflite  denoiser_ae_cfnp200.tflite  denoiser_ae_cfnp50.tflite  denoiser_ae_fnp100.tflite  denoiser_ae_fnp150.tflite  denoiser_ae_fnp200.tflite  denoiser_ae_fnp50.tflite
results/: README.md  calculate_metrics.py  compare_images.py  metrics.py  plot_histograms.py  plot_results_ae.py  requirements.txt
results/blue_dot/: README.md
results/compare_orig_denoised/: compare_images.py
results/csv/: metrics.py  requirements.txt
results/extra/: README.md  generate_exploded_image.py  generate_patches.py  requirements.txt
results/flatsat/: README.md  calculate_metrics.py  plot_histograms.py  requirements.txt
results/images/: rename_files.sh
results/logs/: opssat_smartcam_metadata_20230905_101302.csv  opssat_smartcam_metadata_20230905_101302.xlsx  opssat_smartcam_metadata_20230909_214504(1).xlsx  opssat_smartcam_metadata_20230909_214504.xlsx  opssat_smartcam_metadata_20230912_211130.csv
results/preliminary/: results.csv
results/spacecraft/: README.md  calculate_metrics.py  calculate_metrics_averages.py  convert_timestamp_to_datetime.py  old_plot_histograms.py  plot_histograms.py  plot_results_ae.py  (+2 more)
scripts/: README.md  batch_noiser.sh  batch_splitter.py  batch_train_autoencoders.py  create_ipk.sh  em_test.sh  test_bd.sh  test_em.sh  test_fm.sh  train_all_autoencoders.py
smartcam/: README.md  config.ini
tests/: test_find_bad_jpegs.py  test_function.py
tools/: Dockerfile.denoiser  README.md  build-denoiser.ps1  build-denoiser.sh
tools/denoiser/: BUILD.md  CMakeLists.txt  Dockerfile  Makefile  build.ps1  build.sh
tools/denoiser/src/: denoiser.cpp  denoiser_wip.cpp
training/: README.md
(+233 files in other folders)
